## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = vorbisfile vorbisenc

docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)

doc_DATA = eightphase.png \
           fourphase.png \
           programming.html \
           squarepolar.png \
           stereo.html \
           v-comment.html \
           vorbis-clip.txt \
           vorbis-errors.txt \
           vorbis.html \
           vorbisword2.png \
           wait.png \
           white-ogg.png \
           white-xifish.png

EXTRA_DIST = $(doc_DATA)
