## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = lsp12_0.vqh lsp30_0.vqh res0_1024a_128_1.vqh res0_1024a_128_2.vqh\
	res0_1024a_128_3.vqh res0_1024a_128_4.vqh res0_1024a_128_5.vqh\
	res0_1024a_128_6.vqh res0_1024a_128_7.vqh res0_1024a_128_8.vqh\
	res0_1024a_128_9.vqh res0_1024a_160_1.vqh res0_1024a_160_2.vqh\
	res0_1024a_160_3.vqh res0_1024a_160_4.vqh res0_1024a_160_5.vqh\
	res0_1024a_160_6.vqh res0_1024a_160_7.vqh res0_1024a_160_8.vqh\
	res0_1024a_160_9.vqh res0_1024a_192_1.vqh res0_1024a_192_2.vqh\
	res0_1024a_192_3.vqh res0_1024a_192_4.vqh res0_1024a_192_5.vqh\
	res0_1024a_256_1.vqh res0_1024a_256_2.vqh res0_1024a_256_3.vqh\
	res0_1024a_256_4.vqh res0_1024a_256_5.vqh res0_1024a_350_1.vqh\
	res0_1024a_350_2.vqh res0_1024a_350_3.vqh res0_1024a_350_4.vqh\
	res0_1024a_350_5.vqh res0_128_1024_1.vqh res0_128_1024_2.vqh\
	res0_128_1024_3.vqh res0_128_1024_4.vqh res0_128_1024_5.vqh\
	res0_128_1024_6.vqh res0_128_1024_7.vqh res0_128_1024_8.vqh\
	res0_128_1024_9.vqh res0_128_1024aux.vqh res0_128_128_1.vqh\
	res0_128_128_2.vqh res0_128_128_3.vqh res0_128_128_4.vqh\
	res0_128_128_5.vqh res0_128_128aux.vqh res0_128a_128_1.vqh\
	res0_128a_128_2.vqh res0_128a_128_3.vqh res0_128a_128_4.vqh\
	res0_128a_128_5.vqh res0_128a_160_1.vqh res0_128a_160_2.vqh\
	res0_128a_160_3.vqh res0_128a_160_4.vqh res0_128a_160_5.vqh\
	res0_128a_192_1.vqh res0_128a_192_2.vqh res0_128a_192_3.vqh\
	res0_128a_192_4.vqh res0_128a_192_5.vqh res0_128a_256_1.vqh\
	res0_128a_256_2.vqh res0_128a_256_3.vqh res0_128a_256_4.vqh\
	res0_128a_256_5.vqh res0_128a_350_1.vqh res0_128a_350_2.vqh\
	res0_128a_350_3.vqh res0_128a_350_4.vqh res0_128a_350_5.vqh\
	res0_96_1024_1.vqh res0_96_1024_2.vqh res0_96_1024_3.vqh\
	res0_96_1024_4.vqh res0_96_1024_5.vqh res0_96_1024_6.vqh\
	res0_96_1024_7.vqh res0_96_1024aux.vqh res0_96_128_1.vqh\
	res0_96_128_2.vqh res0_96_128_3.vqh res0_96_128_4.vqh\
	res0_96_128aux.vqh resaux0_1024a_128.vqh resaux0_1024a_160.vqh\
	resaux0_1024a_192.vqh resaux0_1024a_256.vqh resaux0_1024a_350.vqh\
	resaux0_128a_128.vqh resaux0_128a_160.vqh resaux0_128a_192.vqh\
	resaux0_128a_256.vqh resaux0_128a_350.vqh
